[project]
name = "can-cluster"
version = "0.1.0"
description = "Gauge Cluster to communicate with FuelTech via CAN"
authors = [
    {name = "Lucas Torresan"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
