[tool.poetry]
name = "can-cluster"
version = "0.1.0"
description = "Gauge Cluster to communicate with FuelTech via CAN"
authors = ["Lucas Torresan"]
readme = "README.md"
packages = [{ include = "can_cluster" }]
# You can change `can_cluster` above to match your actual package folder name

[tool.poetry.dependencies]
python = "^3.13"
kivy = ">=2.3.1,<3.0.0"
python-can = ">=4.6.1,<5.0.0"
pyserial = ">=3.5,<4.0"
black = ">=25.1.0,<26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
